apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__scopes__tests__interface_type-7.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
expression: "TestResult {\n    query: QUERY3,\n    extracted_scopes: &extracted_scopes,\n    scopes: [\"a\".to_string(), \"b\".to_string()].into_iter().collect(),\n    result: doc,\n    paths,\n}"
---
query:

        query {
            test
            a {
                id
            }
        }
        
extracted_scopes: {"a", "b"}
request scopes: ["a", "b"]
filtered:
{
  test
}

paths: ["/a"]
