apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__scopes__tests__query_field_alias.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
expression: doc
---
{
    "profile",
    "read:user",
    "read:username",
}
