apollo-router/src/plugins/authorization/snapshots/apollo_router__plugins__authorization__scopes__tests__scalar-2.snap
---
source: apollo-router/src/plugins/authorization/scopes.rs
expression: doc
---
query {
  topProducts {
    type
  }
}

